changed css code to remedy problem with contact page image not displaying correctly on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,7 @@ main {
     border-top: 1px solid #474747;
 }
 
+/*Social Media Links*/
 #socials i {
     font-size: 150%;
     padding: 5%;
@@ -173,6 +174,7 @@ main {
 
 }
 
+/*Voyage Title*/
 #voyage-title {
     background-color: rgba(230, 229, 227, .7);
     position: absolute;
@@ -187,10 +189,12 @@ main {
 
 }
 
+/*Voyage Content*/
 #voyage-content {
     width: 100%;
 }
 
+/*Voyage content divs*/
 .voyage-box {
     margin: 10px;
     padding: 2px;
@@ -201,6 +205,7 @@ main {
 
 }
 
+/*Voyage image files*/
 #sheep-circle {
     background-image: url(../images/faroeresized.jpg);
 }
@@ -243,11 +248,13 @@ main {
 
 /*Contact Page*/
 #contact {
-    background-image: url(../images/statue.jpg);
+    /*background-image: url(../images/statue.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: center;*/
+    background: url(../images/statue.jpg) no-repeat center top/cover;
     width: 100%;
     padding: 20px 10% 0 10%;
+    position: relative;
     flex-grow: 1;
 }
 
@@ -342,18 +349,7 @@ main {
         left: auto;
     }
 
-    /*change background image on form page and align to top*/
-    /*#contact {
-        background-image: url(../images/statuecroptop.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-position-y: top;
-        padding: 20px 10% 0 10%;
-        position: relative;
-        flex-grow: 1;
-    }*/
-
+    /*Use different statue image as background*/
     #contact {
         background: url(../images/statuecroptop.jpg) no-repeat center top/cover;
         /*padding: 20px 10% 0 10%;
